# hermes-onebot-adapter

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/composables/: useConfig.ts
frontend/src/router/: index.ts
frontend/src/views/: Advanced.vue  Chat.vue  Commands.vue  ConnectionManagement.vue  Dashboard.vue  Login.vue  Logs.vue  Tools.vue
onebot_adapter/: __init__.py  __main__.py  _async_utils.py  app.py  bot_blacklist.py  config.py  hermes_config.py  installer.py  logging_utils.py  rate_limit.py  update_check.py  usage_stats.py
onebot_adapter/hermes_plugin/: __init__.py  adapter.py  markdown.py  onebot_tools.py  plugin.yaml
onebot_adapter/onebot/: __init__.py  api.py  handler.py  log_format.py  media.py  name_resolver.py  parser.py  segments.py  seq_map.py  ws_api.py  ws_forward.py  ws_reverse.py
onebot_adapter/relay/: __init__.py  hermes_ws.py  protocol.py
onebot_adapter/webui/: __init__.py  log_handler.py  routes.py
scripts/: build_frontend.sh
tests/: conftest.py  test_adapter_protocol.py  test_async_utils.py  test_bot_blacklist.py  test_command_filter.py  test_config_protocol.py  test_forward_ws.py  test_group_config.py  test_health_standalone.py  test_hermes_config.py  test_installer.py  test_log_format.py  test_logging_utils.py  test_markdown.py  test_media.py  test_media_reject.py  test_mode_switch.py  test_name_resolver.py  test_onebot_tools.py  test_parser.py  test_parser_media.py  test_plugin_media_cache.py  test_rate_limit.py  test_reaction_emoji.py  test_relay_push.py  test_relay_queue.py  test_relay_send.py  test_resolve_seq_params.py  test_reverse_ws_auth.py  test_segments.py  test_send_api.py  test_seq_map.py  test_usage_stats.py  test_webui_api.py  test_webui_log_handler.py  test_ws_api.py
